# micro_os

./: .gitignore  Cargo.toml  Makefile  README.md  x86_64-micro_os.json
.cargo/: config.toml
src/: io_port.rs  lib.rs  multiboot_info.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm
src/interrupts/: idt.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/memory/allocator/: bump_allocator.rs  fixed_size_block_allocator.rs  linked_list_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/test/: mod.rs  test_allocator.rs  test_exceptions.rs  test_paging.rs
src/utils/: mod.rs  test_frameworks.rs
src/utils/x86_64_control/: cr0.rs  cr2.rs  cr3.rs  gdt.rs  mod.rs  msr.rs  segmentation.rs  tlb.rs
