[package]
name = "micro_os"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[features]
default = ["use_test"]
use_test = []


[dependencies]
volatile = "0.4.6"
spin = "0.10.0"
linkme = "0.3.33"
paste = "1.0.15"
bitflags = "2.9.1"
linked_list_allocator = "0.9.1"
# x86_64 = "0.15.2"
